--- a/ERL/ERL/Views/Home/Index.cshtml
+++ b/ERL/ERL/Views/Home/Index.cshtml
@@ -7,14 +7,28 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width">
+    <link href="~/Content/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-    @using (Html.BeginForm())
-    {
-        <p>User name: @Html.TextBoxFor(x => x.UserName)</p>
-        <p>Password: @Html.TextBoxFor(x => x.Password)</p>
-        <p><input type="button" value="Login"></p>
-    }
+    <div class="panel panel-success">
+        <div class="panel-heading text-center">Login</div>
+            <div class="panel-body">
+                @using (Html.BeginForm())
+                {
+                    <div class="form-group">
+                        <label>User name: </label>
+                        @Html.TextBoxFor(x => x.UserName, new {@class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Password:</label>
+                        @Html.TextBoxFor(x => x.Password, new {@class = "form-control" })
+                    </div>
+                    <div class="text-center">
+                        <input type="button" class="btn-success" value="Login">
+                    </div>
+                }
+               </div>
+      </div>
 
 </body>
 </html>
