--- a/ERL/ERL/Views/Home/Index.cshtml
+++ b/ERL/ERL/Views/Home/Index.cshtml
@@ -23,6 +23,9 @@
                         <label>Password:</label>
                         @Html.TextBoxFor(x => x.Password, new {@class = "form-control" })
                     </div>
+                    <div class="form-group">
+                        @Html.ActionLink("Register", "Index")
+                    </div>
                     <div class="text-center">
                         <input type="button" class="btn-success" value="Login">
                     </div>
