--- a/ERL/ERL/Views/Home/Index.cshtml
+++ b/ERL/ERL/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                         @Html.TextBoxFor(x => x.Password, new {@class = "form-control" })
                     </div>
                     <div class="form-group">
-                        @Html.ActionLink("Register", "Index")
+                        @Html.ActionLink("Register", "Register")
                     </div>
                     <div class="text-center">
                         <input type="button" class="btn-success" value="Login">
