--- a/ERL/ERL/Views/Home/Index.cshtml
+++ b/ERL/ERL/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ERL.Models.User
 @{
     ViewBag.Title = "Login";
+    Layout = null;
 }
 
 <!DOCTYPE html>
@@ -11,7 +12,7 @@
 </head>
 <body>
     <div class="panel panel-success">
-        <div class="panel-heading text-center">Login</div>
+        <div class="panel-heading text-center">Welcome</div>
             <div class="panel-body">
                 @using (Html.BeginForm())
                 {
