--- a/ERL/ERL/Views/Home/Index.cshtml
+++ b/ERL/ERL/Views/Home/Index.cshtml
@@ -9,6 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <link href="~/Content/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="~/Content/Styles.css" />
 </head>
 <body>
     <div class="panel panel-success">
@@ -16,19 +17,20 @@
             <div class="panel-body">
                 @using (Html.BeginForm())
                 {
+                    @Html.ValidationSummary()
                     <div class="form-group">
                         <label>User name: </label>
-                        @Html.TextBoxFor(x => x.UserName, new {@class = "form-control" })
+                        @Html.TextBoxFor(x => x.UserName, new {placeholder = "Enter your nick" ,@class = "form-control" })
                     </div>
                     <div class="form-group">
                         <label>Password:</label>
-                        @Html.TextBoxFor(x => x.Password, new {@class = "form-control" })
+                        @Html.TextBoxFor(x => x.Password, new {placeholder = "Enter your password", @class = "form-control" })
                     </div>
                     <div class="form-group">
                         @Html.ActionLink("Register","Create", "Registration")
                     </div>
                     <div class="text-center">
-                        <input type="button" class="btn-success" value="Login">
+                        <input type="submit" class="btn-success" value="Login">
                     </div>
                 }
                </div>
